# decky-plugin-store

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  checks.yaml
plugin_store/: cdn.py  constants.py  database.py  discord.py  main.py  plugin_parser.py
plugin_store/api/: __init__.py  dependencies.py  utils.py
plugin_store/api/endpoints/: announcements.py  index.py  plugins.py
plugin_store/api/models/: announcements.py  base.py  delete.py  increment.py  list.py  submit.py  update.py
plugin_store/database/: database.py  utils.py
plugin_store/database/migrations/: env.py
plugin_store/database/migrations/versions/: 2022_11_07_0136_4fc55239b4d6_initial_db_setup.py  2022_11_09_1905-642324500b07_add_tags_unique_constraint.py  2022_11_19_1823-abe90daeb874_initial_db_setup.py  2023_06_13_2205-492a599cd718_version_uniqueness.py  2023_06_26_0057-00b050c80d6d_add_artifact_image_field.py  2023_10_15_1618-91da3fef8793_download_field.py  2023_10_16_1710-f5a91a25a410_download_field.py  2024_08_10_2158-469f48c143b9_announcements.py  4fc55239b4d6_initial_db_setup.py  642324500b07_add_tags_unique_constraint.py  abe90daeb874_initial_db_setup.py
plugin_store/database/models/: Artifact.py  Version.py  __init__.py  announcements.py
plugin_store/templates/: plugin_browser.html
tests/: conftest.py  db_helpers.py  pytest.ini  test_announcement_views.py  test_misc_views.py  test_plugin_views.py  test_views.py
