[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "decky-plugin-store"
version = "0.1.0"
description = "Plugin Store backend for Decky"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "decky_plugin_store"}]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.1"
aiosqlite = "^0.17.0"
asgiref = "^3.5.2"
discord-webhook = {version = "^0.17.0", extras = ["async"]}
fastapi = "^0.85.1"
python-multipart = "^0.0.5"
sqlalchemy = "^1.4.41"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
anyio = "^3.6.2"
black = "^22.8.0"
httpx = "^0.23.0"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-aiohttp = "^1.0.4"
pytest-env = "^0.6.2"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.8.2"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
      | \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
)
'''

[tool.isort]
line_length = 120
order_by_type = false
profile = "black"
src_paths = ["plugin_store"]
