[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "decky-plugin-store"
version = "0.1.0"
description = "Plugin Store backend for Decky"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.11"
alembic = "^1.13.2"
aiosqlite = "^0.20.0" # for async sqlite in sqlalchemy
asgiref = "^3.8.1"
discord-webhook = {version = "^1.3.1", extras = ["async"]}
fastapi = "^0.112.0"
pydantic = "^1.10.17"
python-multipart = "^0.0.22"  # for multipart forms in fastapi
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"
limits = {extras = ["redis"], version = "^3.13.0"}
redis = "^5.0.8"
asyncpg = "^0.29.0" # for async postgres in sqalchemy

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
httpx = "^0.23.3"
isort = "^5.13.2"
mypy = "^1.11.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.8"
pytest-env = "^1.1.3"
pytest-freezer = "^0.4.8"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.14.0"
types-pytest-lazy-fixture = "^0.6.3.20240707"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
      | \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
)
'''

[tool.flake8]
max-line-length = 120

[tool.isort]
line_length = 120
order_by_type = false
profile = "black"
src_paths = ["plugin_store", "tests"]

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = ["discord_webhook", "limits"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "/app/plugin_store"
env = [
    "DB_URL=sqlite+aiosqlite:///:memory:",
    "SUBMIT_AUTH_KEY=deadbeef",
]
asyncio_mode = "auto"
